--- a/charts/platform-base/values.yaml
+++ b/charts/platform-base/values.yaml
@@ -74,3 +74,9 @@ tp-cp-msg-recipes:
 # Default values for tp-cp-hawk.
 tp-cp-hawk:
   enabled: true
+  tp-cp-hawk-infra-prometheus:
+    enabled: false
+
+# Default values for tp-cp-prometheus.
+tp-cp-prometheus:
+  enabled: true
