--- a/charts/platform-base/Chart.yaml
+++ b/charts/platform-base/Chart.yaml
@@ -8,7 +8,7 @@ apiVersion: v2
 name: platform-base
 description: TIBCO Platform base chart
 type: application
-version: 1.8.0-alpha.119
+version: 1.8.0
 appVersion: "1.8.0"
 keywords:
   - tibco-platform
