--- a/charts/platform-bootstrap/Chart.yaml
+++ b/charts/platform-bootstrap/Chart.yaml
@@ -8,7 +8,7 @@ apiVersion: v2
 name: platform-bootstrap
 description: TIBCO Platform bootstrap chart
 type: application
-version: 1.8.0-alpha.9
+version: 1.8.0
 appVersion: "1.8.0"
 keywords:
   - tibco-platform
