--- a/charts/tp-cp-msg-recipes/templates/recipes-preinstall.job.yaml
+++ b/charts/tp-cp-msg-recipes/templates/recipes-preinstall.job.yaml
@@ -109,7 +109,7 @@ spec:
                                   command: ['bash', '-c'] 
                                   args:
                                   - |
-                                    for dir in "pulsar" "ems" "pulsar.old" "ems.old"; do
+                                    for dir in "pulsar" "ems" "pulsar.old" "ems.old" "../infra/msgcore" ; do
                                         dirpath="{{ $recipesParams.recipes.TARGET_PATH }}/\$dir"
                                         if [ -d "{{ $recipesParams.recipes.TARGET_PATH }}/\$dir" ]; then
                                             echo "Changing ownership of \$dirpath to $uid:$gid"
