--- a/charts/tp-cp-hawk-console-recipes/templates/hawk-console.yaml
+++ b/charts/tp-cp-hawk-console-recipes/templates/hawk-console.yaml
@@ -15,7 +15,7 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.7.0",
+      "capabilityVersion": "1.9.0",
       "minCPVersion": "1.5.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.hawkConsole.releaseDate | quote }},
@@ -55,7 +55,7 @@ data:
         - name: tp-dp-hawk-console
           namespace: ${NAMESPACE}
           # FIXME: ??use: .Values.capabilities.hawkConsole.version ??
-          version: "1.7.19"
+          version: "1.9.28"
           repository:
             chartMuseum:
               host: ${HELM_REPO}
@@ -73,6 +73,16 @@ data:
                   livenessInitialDelaySeconds: 15
                   livenessPeriodSeconds: 15
                   livenessTimeoutSeconds: 10
+                  javaOptions: "-Xms1g -Xmx3g"
+                  subscription:
+                    interval:
+                      bw5: 60000
+                      be: 60000
+                      sys: 60000
+                      o11y: 60000
+                  fileupload:
+                    fileSizeLimit: 30MB
+                    requestSizeLimit: 32MB
                 resources:
                   requests:
                     cpu: 200m
@@ -123,7 +133,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/infra"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.7.0"
+          value: "1.9.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
