--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/Chart.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v2
+appVersion: 1.9.0
 description: TIBCO Platform Control Plane - Hawk Infra Query Node
 icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
 maintainers:
 - name: TIBCO Cloud Hawk Team
 name: tp-cp-hawk-infra-querynode
-version: 1.7.19
+version: 1.9.28
