--- a/charts/tp-dp-hawk-console/templates/msg-gateway.stateful.yaml
+++ b/charts/tp-dp-hawk-console/templates/msg-gateway.stateful.yaml
@@ -57,16 +57,12 @@ spec:
             containers:
             - name: "{{ $stsname }}"
               image: "{{ $params.msggw.image }}"
+              # image: "ghcr.io/tibco/msg-platform-cicd/msg-ems-all:10.4.0-66b"
               # v90-rollback: image: "ghcr.io/tibco/msg-platform-cicd/msg-ems-all:10.4.0-47"
               # nightly: image: "ghcr.io/tibco/msg-platform-cicd/msg-ems-all:10.4.0-48"
               imagePullPolicy: "{{ $params.dp.pullPolicy }}"
               resources:
-                requests:
-                  memory: "0.5Gi"
-                  cpu: "0.1"
-                limits:
-                  memory: "4Gi"
-                  cpu: "3"
+{{ $params.msggw.resources | toYaml | indent 16 }}
               # exec /usr/local/watchdog/bin/wait-for-shutdown.sh  ; 
               # exec /usr/local/watchdog/bin/watchdog  ; 
               # cd /app ; exec /app/cloudshell  ; 
@@ -85,6 +81,9 @@ spec:
                 protocol: TCP
               - name: restd-port
                 containerPort: {{ int $params.msggw.ports.restdPort | default 9014 }}
+                protocol: TCP
+              - name: rvmon-port
+                containerPort: {{ int $params.msggw.ports.rvmon | default 7585 }}
                 protocol: TCP
               - name: watchdog-port
                 containerPort: {{ int $params.msggw.ports.watchdogPort }}
@@ -118,8 +117,6 @@ spec:
                 {{ include "msg.pv.vol.mount" $params.msggw.logs | nindent 16 }}
               - mountPath: /podinfo
                 name: podinfo
-              - mountPath: /home/tibadmin/.ssh
-                name: lab-ssh
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               envFrom:
@@ -136,8 +133,12 @@ spec:
                 value: "/logs/restd-api"
               - name: EMS_RESTD_URL
                 value: "http://localhost:{{ $params.msggw.ports.restdPort | default 9014 }}"
+              - name: DP_SUPPORT_SHELL_ENABLED
+                value: {{ $params.msggw.supportShellEnabled | default "no" | quote }}
               - name: MY_DATAPLANE
                 value: "{{ $params.dp.name }}"
+              - name: MY_SVC_NAME
+                value: "{{ $stsname }}"
               - name: MY_SVC_HOST
                 value: "$(MY_POD_NAME).{{ $stsname }}.{{ .Release.Namespace }}.svc"
               - name: ALLOWED_HOSTNAMES
@@ -172,13 +173,6 @@ spec:
                   - path: "annotations"
                     fieldRef:
                       fieldPath: metadata.annotations
-            - name: lab-ssh
-              secret:
-                # 420 => 0644
-                # 384 => 0600
-                defaultMode: 384
-                optional: true
-                secretName: jk-msgdp-ssh
             dnsPolicy: ClusterFirst
             restartPolicy: Always
             schedulerName: default-scheduler
